@@ -110,7 +110,7 @@
             // Initialize tablesorter
             // ***********************
             .tablesorter({
-                theme: 'blue',
+                theme: '<{$tablesorter_theme}>',
                 widthFixed: true,
                 widgets: ['zebra', 'filter'],
                 dateFormat: '<{$tablesorter_dateformat}>', // set the default date format
@@ -129,89 +129,6 @@
             // initialize the pager plugin
             // ****************************
             .tablesorterPager(pagerOptions);
-
-        // Add two new rows using the "addRows" method
-        // the "update" method doesn't work here because not all rows are
-        // present in the table when the pager is applied ("removeRows" is false)
-        // ***********************************************************************
-        var r, $row, num = 50,
-            row = '<tr><td>Student{i}</td><td>{m}</td><td>{g}</td><td>{r}</td><td>{r}</td><td>{r}</td><td>{r}</td><td><button type="button" class="remove" title="Remove this row">X</button></td></tr>' +
-                '<tr><td>Student{j}</td><td>{m}</td><td>{g}</td><td>{r}</td><td>{r}</td><td>{r}</td><td>{r}</td><td><button type="button" class="remove" title="Remove this row">X</button></td></tr>';
-        $('button:contains(Add)').click(function() {
-                // add two rows of random data!
-                r = row.replace(/\{[gijmr]\}/g, function(m) {
-                return {
-                    '{i}' : num + 1,
-                    '{j}' : num + 2,
-                    '{r}' : Math.round(Math.random() * 100),
-                    '{g}' : Math.random() > 0.5 ? 'male' : 'female',
-                    '{m}' : Math.random() > 0.5 ? 'Mathematics' : 'Languages'
-                }[m];
-            });
-            num = num + 2;
-            $row = $(r);
-            $('table')
-                .find('tbody').append($row)
-                .trigger('addRows', [$row]);
-            return false;
-        });
-
-        // Delete a row
-        // *************
-        $('table').delegate('button.remove', 'click' ,function() {
-            var t = $('table');
-            // disabling the pager will restore all table rows
-            // t.trigger('disablePager');
-            // remove chosen row
-            $(this).closest('tr').remove();
-            // restore pager
-            // t.trigger('enablePager');
-            t.trigger('update');
-            return false;
-        });
-
-        // Destroy pager / Restore pager
-        // **************
-        $('button:contains(Destroy)').click(function() {
-            // Exterminate, annhilate, destroy! http://www.youtube.com/watch?v=LOqn8FxuyFs
-            var $t = $(this);
-            if (/Destroy/.test( $t.text() )) {
-                $('table').trigger('destroyPager');
-                $t.text('Restore Pager');
-            } else {
-                $('table').tablesorterPager(pagerOptions);
-                $t.text('Destroy Pager');
-            }
-            return false;
-        });
-
-        // Disable / Enable
-        // **************
-        $('.toggle').click(function() {
-            var mode = /Disable/.test( $(this).text() );
-            $('table').trigger( (mode ? 'disable' : 'enable') + 'Pager');
-            $(this).text( (mode ? 'Enable' : 'Disable') + 'Pager');
-            return false;
-        });
-        $('table').bind('pagerChange', function() {
-            // pager automatically enables when table is sorted.
-            $('.toggle').text('Disable Pager');
-        });
-
-        // clear storage (page & size)
-        $('.clear-pager-data').click(function() {
-            // clears user set page & size from local storage, so on page
-            // reload the page & size resets to the original settings
-            $.tablesorter.storage( $('table'), 'tablesorter-pager', '' );
-        });
-
-        // go to page 1 showing 10 rows
-        $('.goto').click(function() {
-            // triggering "pageAndSize" without parameters will reset the
-            // pager to page 1 and the original set size (10 by default)
-            // $('table').trigger('pageAndSize')
-            $('table').trigger('pageAndSize', [1, 10]);
-        });
 
     });
 
