@@ -15,7 +15,7 @@
 
     <{include file='db:admin_pagertop.tpl' }>
 
-    <table id="sortTable" class="tablesorter-blue" cellspacing="1" cellpadding="0"  width="100%">
+    <table id="sortTable" class="tablesorter-<{$tablesorter_theme}>" cellspacing="1" cellpadding="0"  width="100%">
 
 
 		<thead>
