@@ -6,7 +6,7 @@
     <h3><{$eventsHeader}></h3>
     <{include file='db:admin_pagertop.tpl' }>
 
-    <table id="sortTable" class="tablesorter-blue" cellspacing="1" cellpadding="0"  width="100%">
+    <table id="sortTable" class="tablesorter-<{$tablesorter_theme}>" cellspacing="1" cellpadding="0"  width="100%">
         <thead>
         <tr class='head'>
             <th class="center"><{$smarty.const._MA_WGEVENTS_EVENT_NAME}></th>
@@ -35,7 +35,7 @@
 <{if $questions_list|default:''}>
     <{include file='db:admin_pagertop.tpl' }>
 
-    <table id="sortTable" class="tablesorter-blue" cellspacing="1" cellpadding="0"  width="100%">
+    <table id="sortTable" class="tablesorter-<{$tablesorter_theme}>" cellspacing="1" cellpadding="0"  width="100%">
         <thead>
             <tr class='head'>
                 <th class="center"><{$smarty.const._MA_WGEVENTS_QUESTION_ID}></th>
